apps/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-newsify-consolidated-ingress
  namespace: newsify-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: dev.backend.id.vn
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: newsify-frontend
                port:
                  number: 3000
